src/objects/Prepayment_Step__c.object
<CustomObject>
    <description>Prepayement steps, including all relevant data.</description>
    <fields>
        <fullName>Opportunity__c</fullName>
        <description>Related Opportunity</description>
        <inlineHelpText>Related Opportunity</inlineHelpText>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Prepayment Steps</relationshipLabel>
        <relationshipName>Prepayment_Steps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Prepayment_Penalty__c</fullName>
        <description>Penalty for prepayment at this step (%).</description>
        <label>Prepayment Penalty</label>
        <precision>4</precision>
        <required>true</required>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Prepayment_Step_Year_End__c</fullName>
        <description>The year in which this prepayment step ends.  YYYY Format required.</description>
        <inlineHelpText>The year in which this prepayment step ends.  YYYY Format.</inlineHelpText>
        <label>Prepayment Step Year End</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Prepayment_Step__c</fullName>
        <description>The Step</description>
        <inlineHelpText>The Step</inlineHelpText>
        <label>Prepayment Step</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Yield_Maintenance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Yield Maintenance</label>
        <type>Checkbox</type>
    </fields>
    <label>Prepayment Step</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Prepayment Step</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Prepayment Steps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>